fusion code in image_loader, notebooks suck in git

--- a/dhdrnet/notebooks/fusion.ipynb
+++ b/dhdrnet/notebooks/fusion.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -17,13 +21,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import colour\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy\n",
+    "import numpy as np\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib inline"
@@ -32,7 +40,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "from dhdrnet import image_loader as il"
@@ -66,16 +78,20 @@
    },
    "outputs": [],
    "source": [
-    "DATA_DIR = Path(\"../../data/HDR+/dngs/\")\n",
+    "DATA_DIR = Path(\"../../data/HDR+/\")\n",
     "\n",
     "num_imgs = 5\n",
-    "loaded_images = il.read_images(DATA_DIR, limit=num_imgs)"
+    "loaded_images = il.read_images(DATA_DIR / \"dngs\", limit=num_imgs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "for p, li in loaded_images.items():\n",
@@ -110,6 +126,9 @@
     "autoscroll": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "-"
     }
@@ -130,15 +149,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # What about writing the images out to disk now?\n",
-    "# image_list = np.random.choice(list(DATA_DIR.glob(\"*.dng\")), 5)\n",
-    "# il.write_multi_exposure(image_list)"
+    "# What about writing the images out to disk now?\n",
+    "image_list = np.random.choice(list((DATA_DIR/\"dngs\").glob(\"*.dng\")), 5)\n",
+    "il.write_multi_exposure(image_list)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "pngs = il.group_ldr_paths(DATA_DIR / \"processed\")\n",
+    "pngs\n",
+    "# for p in pngs:\n",
+    "#     loaded = plt.imread(str(p))\n",
+    "#     plt.imshow(loaded)\n",
+    "#     plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "for name, exposures in multi_exposure.items():\n",
@@ -155,22 +192,33 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "/mnt/zfspool/development/DHDRNet/.venv/bin/python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "DHDRNet",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": null,
    "name": "dhdrnet"
   },
   "language_info": {
@@ -183,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   },
   "name": "fusion.ipynb"
  },
