good fusion code, notebooks, project config updates

--- a/dhdrnet/notebooks/fusion.ipynb
+++ b/dhdrnet/notebooks/fusion.ipynb
@@ -81,17 +81,13 @@
     "DATA_DIR = Path(\"../../data/HDR+/\")\n",
     "\n",
     "num_imgs = 5\n",
-    "loaded_images = il.read_images(DATA_DIR / \"dngs\", limit=num_imgs)"
+    "loaded_images, image_paths = il.read_images(DATA_DIR / \"dngs\", limit=num_imgs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for p, li in loaded_images.items():\n",
@@ -116,7 +112,7 @@
    "source": [
     "## Adjust the exposure\n",
     "Let's try and adjust the exposures. \n",
-    "Picking 5 evenly spaced values over [0,2]"
+    "Picking 5 evenly spaced values over [-4,4]"
    ]
   },
   {
@@ -146,44 +142,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# What about writing the images out to disk now?\n",
-    "image_list = np.random.choice(list((DATA_DIR/\"dngs\").glob(\"*.dng\")), 5)\n",
-    "il.write_multi_exposure(image_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pngs = il.group_ldr_paths(DATA_DIR / \"processed\")\n",
-    "pngs\n",
-    "# for p in pngs:\n",
-    "#     loaded = plt.imread(str(p))\n",
-    "#     plt.imshow(loaded)\n",
-    "#     plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "jupyter": {
-     "outputs_hidden": false
+     "outputs_hidden": true
     }
    },
    "outputs": [],
    "source": [
-    "for name, exposures in multi_exposure.items():\n",
-    "    image_stack = colour_hdri.ImageStack()\n",
-    "    for image in exposures:\n",
-    "        image_stack.append(image)\n",
-    "    fused = colour_hdri.image_stack_to_radiance_image(image_stack)\n",
-    "    colour.plotting.plot_image(fused)"
+    "# What about writing the images out to disk now?\n",
+    "il.write_multi_exposure(image_paths)"
    ]
   },
   {
@@ -191,21 +158,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mexp_path_dict = il.group_ldr_paths(DATA_DIR / \"processed\")\n",
+    "merged = il.merge_all_test(mexp_path_dict)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "import rawpy\n",
+    "cols = 3\n",
+    "fig, axs = plt.subplots(ncols=cols + 1,nrows=len(merged), squeeze=False, figsize=tuple(5*i for i in (10, 40)))\n",
+    "plt.tight_layout()\n",
+    "print(axs.shape)\n",
+    "for row, (deb,rob,mert) in enumerate(merged):\n",
+    "    name = deb.name.split(\".\")[0]\n",
+    "    axs[row,0].set_xlabel(\"debevec \" + name)\n",
+    "    axs[row,0].imshow(plt.imread(str(deb)))\n",
+    "    \n",
+    "    axs[row,1].set_xlabel(\"robertson \" + name)\n",
+    "    axs[row,1].imshow(plt.imread(str(rob)))\n",
+    "    \n",
+    "    axs[row,2].set_xlabel(\"mertens \" + name)\n",
+    "    axs[row,2].imshow(plt.imread(str(mert)))\n",
+    "\n",
+    "    raw_path = str(DATA_DIR/\"dngs\"/f\"{name}.dng\")\n",
+    "    dng = rawpy.imread(raw_path).postprocess()\n",
+    "    axs[row,3].set_xlabel(\"dng \" + name)\n",
+    "    axs[row,3].imshow(dng)\n",
+    "    \n",
+    "    fig.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -231,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   },
   "name": "fusion.ipynb"
  },
