--- a/dhdrnet/notebooks/histograms.ipynb
+++ b/dhdrnet/notebooks/histograms.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1855,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dhdrnet",
+   "display_name": "DHDRNet",
    "language": "python",
    "name": "dhdrnet"
   },
