--- a/dhdrnet/notebooks/fusion.ipynb
+++ b/dhdrnet/notebooks/fusion.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -22,6 +23,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -41,6 +43,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -67,6 +70,7 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
+    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "jupyter": {
@@ -88,6 +92,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -156,6 +161,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -216,7 +222,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dhdrnet",
+   "display_name": "DHDRNet",
    "language": "python",
    "name": "dhdrnet"
   },
@@ -230,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   },
   "name": "fusion.ipynb"
  },
