get_image_from_record, notebook

--- a/dhdrnet/notebooks/perceptual_loss_exposure_corrected.ipynb
+++ b/dhdrnet/notebooks/perceptual_loss_exposure_corrected.ipynb
@@ -541,87 +541,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>score</th>\n",
-       "      <th>ev</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>c1b1_20150408_201933_915</th>\n",
-       "      <td>0.399799</td>\n",
-       "      <td>(3.0, 5.0)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5a9e_20141005_163643_581</th>\n",
-       "      <td>0.875441</td>\n",
-       "      <td>(3.0, 5.0)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5a9e_20141008_114756_961</th>\n",
-       "      <td>0.938003</td>\n",
-       "      <td>(-2.0, 4.5)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5a9e_20141008_114756_961</th>\n",
-       "      <td>0.948073</td>\n",
-       "      <td>(-2.5, 4.5)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5a9e_20141005_165016_381</th>\n",
-       "      <td>0.980791</td>\n",
-       "      <td>(2.0, 4.5)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                             score           ev\n",
-       "name                                           \n",
-       "c1b1_20150408_201933_915  0.399799   (3.0, 5.0)\n",
-       "5a9e_20141005_163643_581  0.875441   (3.0, 5.0)\n",
-       "5a9e_20141008_114756_961  0.938003  (-2.0, 4.5)\n",
-       "5a9e_20141008_114756_961  0.948073  (-2.5, 4.5)\n",
-       "5a9e_20141005_165016_381  0.980791   (2.0, 4.5)"
+       "score      0.399799\n",
+       "ev       (3.0, 5.0)\n",
+       "Name: c1b1_20150408_201933_915, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mse_top5 = mse_df.sort_values(by=\"score\").iloc[:5]\n",
-    "mse_top5"
+    "mse_top5.iloc[0]"
    ]
   },
   {
