updated train data to exclude synthetics

--- a/dhdrnet/notebooks/traindata.ipynb
+++ b/dhdrnet/notebooks/traindata.ipynb
@@ -26,11 +26,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "\n",
     "from dhdrnet.Dataset import LUTDataset\n",
-    "from dhdrnet.util import ROOT_DIR, DATA_DIR\n",
-    "import matplotlib.pyplot as plt"
+    "from dhdrnet.util import DATA_DIR, ROOT_DIR"
    ]
   },
   {
@@ -41,10 +42,10 @@
    "source": [
     "precomputed = ROOT_DIR / \"precomputed_data\"\n",
     "ds = LUTDataset(\n",
-    "        choice_path=(precomputed / \"store_exposure_correct_cleaned.csv\"),\n",
-    "        exposure_path= DATA_DIR / \"correct_exposures\" / \"exposures\",\n",
-    "        name_list=ROOT_DIR/\"train.txt\"\n",
-    "    )"
+    "    choice_path=(precomputed / \"store_exposure_correct_cleaned.csv\"),\n",
+    "    exposure_path=DATA_DIR / \"correct_exposures\" / \"exposures\",\n",
+    "    name_list=ROOT_DIR / \"train.txt\",\n",
+    ")"
    ]
   },
   {
@@ -54,10 +55,10 @@
    "outputs": [],
    "source": [
     "df = (\n",
-    "        pd.read_csv(precomputed / \"store_exposure_correct_cleaned.csv\")\n",
-    "        .set_index(\"name\")\n",
-    "        .sort_index()\n",
-    "     )\n"
+    "    pd.read_csv(precomputed / \"store_exposure_correct_cleaned.csv\")\n",
+    "    .set_index(\"name\")\n",
+    "    .sort_index()\n",
+    ")"
    ]
   },
   {
@@ -194,7 +195,9 @@
    ],
    "source": [
     "bdf = df[(df[\"ev1\"] == 0) | (df[\"ev2\"] == 0)].copy()\n",
-    "bdf[\"ev\"] = bdf[[\"ev1\",\"ev2\"]].apply(lambda evs: [ev for ev in evs if ev != 0][0],axis=1)\n",
+    "bdf[\"ev\"] = bdf[[\"ev1\", \"ev2\"]].apply(\n",
+    "    lambda evs: [ev for ev in evs if ev != 0][0], axis=1\n",
+    ")\n",
     "bdf = bdf.drop(columns=[\"ev1\", \"ev2\"])\n",
     "mse_bdf = bdf[bdf[\"metric\"] == \"mse\"]\n",
     "bdf"
@@ -230,7 +233,7 @@
    ],
    "source": [
     "by_ev = bdf.pivot_table(index=\"name\", columns=[\"metric\", \"ev\"], values=\"score\")\n",
-    "by_ev[\"mse\"].idxmin(axis=1)\n"
+    "by_ev[\"mse\"].idxmin(axis=1)"
    ]
   },
   {
@@ -1285,8 +1288,9 @@
    "outputs": [],
    "source": [
     "from more_itertools import flatten\n",
-    "train_names = list(flatten(pd.read_csv(ROOT_DIR/\"train.txt\", header=None).to_numpy()))\n",
-    "test_names = list(flatten(pd.read_csv(ROOT_DIR/\"test.txt\", header=None).to_numpy()))"
+    "\n",
+    "train_names = list(flatten(pd.read_csv(ROOT_DIR / \"train.txt\", header=None).to_numpy()))\n",
+    "test_names = list(flatten(pd.read_csv(ROOT_DIR / \"test.txt\", header=None).to_numpy()))"
    ]
   },
   {
