bunch of data processing, wider up down range, trained on no-synth

--- a/dhdrnet/notebooks/filter_synthetic.ipynb
+++ b/dhdrnet/notebooks/filter_synthetic.ipynb
@@ -403,8 +403,8 @@
    "source": [
     "names_train = names.sample(frac=0.8)\n",
     "names_test = names.loc[names.index.difference(names_train.index)]\n",
-    "names_train.to_csv(ROOT_DIR / \"train_no_synthetic.csv\", index=False, header=[\"names\"])\n",
-    "names_test.to_csv(ROOT_DIR / \"test_no_synthetic.csv\", index=False, header=[\"names\"])"
+    "names_train.to_csv(ROOT_DIR / \"precomputed_data\"/ \"train_no_synthetic.csv\", index=False, header=[\"names\"])\n",
+    "names_test.to_csv(ROOT_DIR / \"precomputed_data\" / \"test_no_synthetic.csv\", index=False, header=[\"names\"])"
    ]
   },
   {
