--- a/dhdrnet/test.org
+++ b/dhdrnet/test.org
@@ -1,5 +1,5 @@
 #+TITLE: Test Tables and such
-#+PROPERTY: header-args :async yes :session /jpy::84289601f8c10c7ce585a4e69bf5ab7353f755f149807129
+#+PROPERTY: header-args :async yes :session /jpy::
 
 * Testing Converting the Errors to Probabilities
 #+BEGIN_SRC jupyter-python
@@ -86,18 +86,18 @@ print(inv_prob)
 
 #+RESULTS:
 #+begin_example
-tensor([[66.5910, 69.2041, 27.2806, 61.0278, 97.7251, 23.3812,  5.6667, 76.9371,
-         80.4593, 84.2469],
-        [96.5479, 63.3671, 60.4586,  7.6775, 83.2170, 54.8003,  3.6124, 22.1430,
-         36.0411,  8.0842],
-        [84.8353,  7.6244, 14.9038,  4.6812, 44.6573, 70.7590, 30.0510, 72.6739,
-         73.4454, 25.6744]])
-tensor([[0.0809, 0.0741, 0.1831, 0.0954, 0.0000, 0.1932, 0.2393, 0.0540, 0.0449,
-         0.0350],
-        [0.0000, 0.0627, 0.0682, 0.1678, 0.0252, 0.0788, 0.1755, 0.1405, 0.1143,
-         0.1671],
-        [0.0000, 0.1843, 0.1669, 0.1913, 0.0959, 0.0336, 0.1307, 0.0290, 0.0272,
-         0.1412]])
+tensor([[74.1587, 82.7843, 10.8144, 22.1201, 17.0481, 25.2346, 17.0551, 21.8748,
+          3.8643, 66.4096],
+        [46.8657, 28.4840, 16.3497, 59.6351, 51.8695, 39.1494, 57.8994, 46.3365,
+          0.3531, 62.9342],
+        [16.6854, 65.8373,  9.8939, 37.0860, 42.2633, 29.1208,  6.4745,  7.9376,
+         99.5067, 41.2477]])
+tensor([[0.0177, 0.0000, 0.1479, 0.1247, 0.1351, 0.1183, 0.1351, 0.1252, 0.1622,
+         0.0337],
+        [0.0732, 0.1570, 0.2123, 0.0150, 0.0504, 0.1084, 0.0229, 0.0756, 0.2852,
+         0.0000],
+        [0.1296, 0.0527, 0.1402, 0.0977, 0.0896, 0.1101, 0.1456, 0.1433, 0.0000,
+         0.0912]])
 #+end_example
 
 
@@ -116,7 +116,8 @@ plt.scatter(x, y, 10 / (1 - 10*s))
 :                1.75,   2.0,  2.25,   2.5,  2.75,   3.0,  3.25,   3.5,  3.75,
 :                 4.0,  4.25,   4.5,  4.75,   5.0,  5.25,   5.5,  5.75,   6.0],
 :              dtype='float64', name='ev')
-: <matplotlib.collections.PathCollection at 0x7fdeee375640>
+: <matplotlib.collections.PathCollection at 0x7fc6d02dc7f0>
+[[file:./.ob-jupyter/56560a96df6e20f70b64f853bca526dfd39f0b0c.png]]
 :END:
 
 #+BEGIN_SRC jupyter-python
@@ -127,7 +128,7 @@ plt.scatter(x=errors.columns, y=F.softmax(torch.tensor(mse_prob),dim=0))
 
 #+RESULTS:
 :RESULTS:
-: <matplotlib.collections.PathCollection at 0x7fdef483e4f0>
+: <matplotlib.collections.PathCollection at 0x7fc6cea16b20>
 [[file:./.ob-jupyter/be8b74901ac258ffb3e6fb5add2e59e76397f938.png]]
 :END:
 
@@ -147,7 +148,7 @@ def get_best_model(model_cls, backbone: str):
     with io.capture_output(stdout=True, stderr=True) as _captured:
         trainer = Trainer(gpus=gpus, progress_bar_refresh_rate=0)
         test_scores = dict()
-        for ckpt in (ROOT_DIR / "checkpoints").glob(f"*{backbone}*"):
+        for ckpt in (ROOT_DIR / "checkpoints").glob(f"*{backbone}*.ckpt"):
             model = model_cls.load_from_checkpoint(checkpoint_path=str(ckpt))
             model.eval()
 
@@ -178,7 +179,7 @@ seed_everything(19)
 #     checkpoint_path=str(ROOT_DIR / "checkpoints" / f"{name}.ckpt")
 # ).to(device)
 
-rcnet_score, rcnet_model, rc_name = get_best_model(RCNet, "reconsctruction")
+rcnet_score, rcnet_model, rc_name = get_best_model(RCNet, "reconstruction")
 mobile_score, mobile_model, mobile_name = get_best_model(DHDRMobileNet_v3, "mobile_v3")
 resnet_score, resnet_model, resnet_name = get_best_model(DHDRResnet, "resnet")
 squeeze_score, squeeze_model, squeeze_name = get_best_model(DHDRSqueezeNet, "squeeze")
@@ -188,20 +189,59 @@ print(f"{squeeze_score=}")
 #+END_SRC
 
 #+RESULTS:
+:RESULTS:
+: GPU available: True, used: True
+: TPU available: False, using: 0 TPU cores
+: CUDA_VISIBLE_DEVICES: [0]
+# [goto error]
 #+begin_example
-GPU available: True, used: True
-TPU available: False, using: 0 TPU cores
-CUDA_VISIBLE_DEVICES: [0]
-GPU available: True, used: True
-TPU available: False, using: 0 TPU cores
-CUDA_VISIBLE_DEVICES: [0]
-GPU available: True, used: True
-TPU available: False, using: 0 TPU cores
-CUDA_VISIBLE_DEVICES: [0]
-mobile_score=1.519905924797058
-resnet_score=1.5426706075668335
-squeeze_score=1.6619364023208618
+---------------------------------------------------------------------------
+RuntimeError                              Traceback (most recent call last)
+<ipython-input-15-0b2caf67b469> in <module>
+     15 # ).to(device)
+     16 
+---> 17 rcnet_score, rcnet_model, rc_name = get_best_model(RCNet, "reconstruction")
+     18 mobile_score, mobile_model, mobile_name = get_best_model(DHDRMobileNet_v3, "mobile_v3")
+     19 resnet_score, resnet_model, resnet_name = get_best_model(DHDRResnet, "resnet")
+
+<ipython-input-9-d5b54893637f> in get_best_model(model_cls, backbone)
+     12         test_scores = dict()
+     13         for ckpt in (ROOT_DIR / "checkpoints").glob(f"*{backbone}*"):
+---> 14             model = model_cls.load_from_checkpoint(checkpoint_path=str(ckpt))
+     15             model.eval()
+     16 
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/pytorch_lightning/core/saving.py in load_from_checkpoint(cls, checkpoint_path, map_location, hparams_file, tags_csv, *args, **kwargs)
+    140             checkpoint = pl_load(checkpoint_path, map_location=map_location)
+    141         else:
+--> 142             checkpoint = pl_load(checkpoint_path, map_location=lambda storage, loc: storage)
+    143 
+    144         # add the hparams from csv file to checkpoint
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/pytorch_lightning/utilities/cloud_io.py in load(path_or_url, map_location)
+      7 def load(path_or_url: str, map_location=None):
+      8     if urlparse(path_or_url).scheme == '' or Path(path_or_url).drive:  # no scheme or with a drive letter
+----> 9         return torch.load(path_or_url, map_location=map_location)
+     10     else:
+     11         return torch.hub.load_state_dict_from_url(path_or_url, map_location=map_location)
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torch/serialization.py in load(f, map_location, pickle_module, **pickle_load_args)
+    591                     return torch.jit.load(f)
+    592                 return _load(opened_zipfile, map_location, pickle_module, **pickle_load_args)
+--> 593         return _legacy_load(opened_file, map_location, pickle_module, **pickle_load_args)
+    594 
+    595 
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torch/serialization.py in _legacy_load(f, map_location, pickle_module, **pickle_load_args)
+    778     for key in deserialized_storage_keys:
+    779         assert key in deserialized_objects
+--> 780         deserialized_objects[key]._set_from_file(f, offset, f_should_read_directly)
+    781         if offset is not None:
+    782             offset = f.tell()
+
+RuntimeError: unexpected EOF, expected 8 more bytes. The file might be corrupted.
 #+end_example
+:END:
 Let's get some predictions out of the model and evaluate it.
 
 #+BEGIN_SRC jupyter-python
@@ -289,7 +329,16 @@ print(f"{squeeze_acc=}")
 #+END_SRC
 
 #+RESULTS:
-: rc_acc='25.28%'
-: resnet_acc='80.80%'
-: mobile_acc='77.76%'
-: squeeze_acc='75.41%'
+:RESULTS:
+# [goto error]
+: ---------------------------------------------------------------------------
+: NameError                                 Traceback (most recent call last)
+: <ipython-input-19-a2453bad8f1e> in <module>
+: ----> 1 rc_acc = topk_accuracy(rcnet_model, get_rec_predictions, reconstruction_loader, k=3)
+:       2 resnet_acc = topk_accuracy(resnet_model, get_ce_predictions, lut_loader, k=3)
+:       3 mobile_acc = topk_accuracy(mobile_model, get_ce_predictions, lut_loader, k=3)
+:       4 squeeze_acc = topk_accuracy(squeeze_model, get_ce_predictions, lut_loader, k=3)
+:       5 
+: 
+: NameError: name 'rcnet_model' is not defined
+:END:
