--- a/dhdrnet/test.org
+++ b/dhdrnet/test.org
@@ -86,18 +86,18 @@ print(inv_prob)
 
 #+RESULTS:
 #+begin_example
-tensor([[66.5910, 69.2041, 27.2806, 61.0278, 97.7251, 23.3812,  5.6667, 76.9371,
-         80.4593, 84.2469],
-        [96.5479, 63.3671, 60.4586,  7.6775, 83.2170, 54.8003,  3.6124, 22.1430,
-         36.0411,  8.0842],
-        [84.8353,  7.6244, 14.9038,  4.6812, 44.6573, 70.7590, 30.0510, 72.6739,
-         73.4454, 25.6744]])
-tensor([[0.0809, 0.0741, 0.1831, 0.0954, 0.0000, 0.1932, 0.2393, 0.0540, 0.0449,
-         0.0350],
-        [0.0000, 0.0627, 0.0682, 0.1678, 0.0252, 0.0788, 0.1755, 0.1405, 0.1143,
-         0.1671],
-        [0.0000, 0.1843, 0.1669, 0.1913, 0.0959, 0.0336, 0.1307, 0.0290, 0.0272,
-         0.1412]])
+tensor([[34.8863, 64.8487, 97.5512, 11.6118, 29.5682, 51.3822, 18.5122, 90.1710,
+         79.2257, 96.5870],
+        [29.1312, 79.1191, 70.5082, 38.8581, 54.2011, 29.6890, 18.1676, 54.6738,
+         63.3873,  0.8101],
+        [50.2965, 96.3907, 73.2642, 17.8870, 20.7448, 37.8812,  2.1352, 66.8455,
+         20.7351, 55.2893]])
+tensor([[0.1562, 0.0815, 0.0000, 0.2142, 0.1695, 0.1151, 0.1970, 0.0184, 0.0457,
+         0.0024],
+        [0.1418, 0.0000, 0.0244, 0.1142, 0.0707, 0.1402, 0.1728, 0.0693, 0.0446,
+         0.2221],
+        [0.0882, 0.0000, 0.0443, 0.1503, 0.1448, 0.1120, 0.1804, 0.0566, 0.1448,
+         0.0787]])
 #+end_example
 
 
@@ -116,7 +116,8 @@ plt.scatter(x, y, 10 / (1 - 10*s))
 :                1.75,   2.0,  2.25,   2.5,  2.75,   3.0,  3.25,   3.5,  3.75,
 :                 4.0,  4.25,   4.5,  4.75,   5.0,  5.25,   5.5,  5.75,   6.0],
 :              dtype='float64', name='ev')
-: <matplotlib.collections.PathCollection at 0x7fdeee375640>
+: <matplotlib.collections.PathCollection at 0x7fb4f716ec40>
+[[file:./.ob-jupyter/56560a96df6e20f70b64f853bca526dfd39f0b0c.png]]
 :END:
 
 #+BEGIN_SRC jupyter-python
@@ -127,7 +128,7 @@ plt.scatter(x=errors.columns, y=F.softmax(torch.tensor(mse_prob),dim=0))
 
 #+RESULTS:
 :RESULTS:
-: <matplotlib.collections.PathCollection at 0x7fdef483e4f0>
+: <matplotlib.collections.PathCollection at 0x7fb4f5862f70>
 [[file:./.ob-jupyter/be8b74901ac258ffb3e6fb5add2e59e76397f938.png]]
 :END:
 
@@ -147,7 +148,7 @@ def get_best_model(model_cls, backbone: str):
     with io.capture_output(stdout=True, stderr=True) as _captured:
         trainer = Trainer(gpus=gpus, progress_bar_refresh_rate=0)
         test_scores = dict()
-        for ckpt in (ROOT_DIR / "checkpoints").glob(f"*{backbone}*"):
+        for ckpt in (ROOT_DIR / "checkpoints").glob(f"*{backbone}*.ckpt"):
             model = model_cls.load_from_checkpoint(checkpoint_path=str(ckpt))
             model.eval()
 
@@ -178,7 +179,7 @@ seed_everything(19)
 #     checkpoint_path=str(ROOT_DIR / "checkpoints" / f"{name}.ckpt")
 # ).to(device)
 
-rcnet_score, rcnet_model, rc_name = get_best_model(RCNet, "reconsctruction")
+rcnet_score, rcnet_model, rc_name = get_best_model(RCNet, "reconstruction")
 mobile_score, mobile_model, mobile_name = get_best_model(DHDRMobileNet_v3, "mobile_v3")
 resnet_score, resnet_model, resnet_name = get_best_model(DHDRResnet, "resnet")
 squeeze_score, squeeze_model, squeeze_name = get_best_model(DHDRSqueezeNet, "squeeze")
@@ -198,9 +199,12 @@ CUDA_VISIBLE_DEVICES: [0]
 GPU available: True, used: True
 TPU available: False, using: 0 TPU cores
 CUDA_VISIBLE_DEVICES: [0]
-mobile_score=1.519905924797058
-resnet_score=1.5426706075668335
-squeeze_score=1.6619364023208618
+GPU available: True, used: True
+TPU available: False, using: 0 TPU cores
+CUDA_VISIBLE_DEVICES: [0]
+mobile_score=1.52499258518219
+resnet_score=1.5463569164276123
+squeeze_score=1.6655139923095703
 #+end_example
 Let's get some predictions out of the model and evaluate it.
 
@@ -253,7 +257,7 @@ def topk_accuracy(model, evaluator, dataloader, k=4):
         if true_ev in predicted_evs:
             c += 1
 
-    return f"{100*c / len(names):.2f}%"
+    return 100.0 * c / len(names)
 #+END_SRC
 
 #+RESULTS:
@@ -261,6 +265,10 @@ def topk_accuracy(model, evaluator, dataloader, k=4):
 #+BEGIN_SRC jupyter-python
 rc_data = test_data
 reconstruction_loader = DataLoader(rc_data, batch_size=70, num_workers=8)
+
+rcnet_model = RCNet.load_from_checkpoint(
+    str(ROOT_DIR / "checkpoints" / "reconstructiondhdr-epoch=173-val_loss=0.00.ckpt")
+).to(device)
 
 lut_data = LUTDataset(
     df=pd.read_csv(ROOT_DIR / "precomputed_data" / "store_current.csv"),
@@ -270,26 +278,196 @@ lut_data = LUTDataset(
     transform=Compose([Resize((300, 300)), ToTensor()]),
 )
 lut_loader = DataLoader(lut_data, batch_size=70, num_workers=8)
-
 #+END_SRC
 
 #+RESULTS:
-
 
 #+BEGIN_SRC jupyter-python
-rc_acc = topk_accuracy(rcnet_model, get_rec_predictions, reconstruction_loader, k=3)
-resnet_acc = topk_accuracy(resnet_model, get_ce_predictions, lut_loader, k=3)
-mobile_acc = topk_accuracy(mobile_model, get_ce_predictions, lut_loader, k=3)
-squeeze_acc = topk_accuracy(squeeze_model, get_ce_predictions, lut_loader, k=3)
+from collections import defaultdict
+from pprint import pprint
 
-print(f"{rc_acc=}")
-print(f"{resnet_acc=}")
-print(f"{mobile_acc=}")
-print(f"{squeeze_acc=}")
+model_loader_pairs = {
+  "Reconstruction": (rcnet_model,   get_rec_predictions, reconstruction_loader),
+  "ResNet-18":      (resnet_model,  get_ce_predictions,  lut_loader),
+  "MobileNet-v2":   (mobile_model,  get_ce_predictions,  lut_loader),
+  "SqueezeNet":     (squeeze_model, get_ce_predictions,  lut_loader),
+}
+
+model_topk_scores = defaultdict(list)
+
+for k in range(1, 8):
+    for name, args in model_loader_pairs.items():
+        score = topk_accuracy(*args, k=k)
+        model_topk_scores[name].append(score)
+
+pprint(model_topk_scores)
 #+END_SRC
 
 #+RESULTS:
-: rc_acc='25.28%'
-: resnet_acc='80.80%'
-: mobile_acc='77.76%'
-: squeeze_acc='75.41%'
+:RESULTS:
+# [goto error]
+#+begin_example
+---------------------------------------------------------------------------
+RuntimeError                              Traceback (most recent call last)
+<ipython-input-30-32c8a84ddc86> in <module>
+     13 for k in range(1, 8):
+     14     for name, args in model_loader_pairs.items():
+---> 15         score = topk_accuracy(*args, k=k)
+     16         model_topk_scores[name].append(score)
+     17
+
+<ipython-input-18-b8c0ca167dfc> in topk_accuracy(model, evaluator, dataloader, k)
+      1 def topk_accuracy(model, evaluator, dataloader, k=4):
+      2     model.eval()
+----> 3     names, pred_evs, true_evs = zip(
+      4         *flatten((evaluator(model, batch, k) for batch in dataloader))
+      5     )
+
+<ipython-input-18-b8c0ca167dfc> in <genexpr>(.0)
+      2     model.eval()
+      3     names, pred_evs, true_evs = zip(
+----> 4         *flatten((evaluator(model, batch, k) for batch in dataloader))
+      5     )
+      6
+
+<ipython-input-9-fd9eb7c4e4cf> in get_rec_predictions(model, batch, k)
+     11 def get_rec_predictions(model, batch, k=4):
+     12     X, y_true, names = batch
+---> 13     y_pred = model(X.to(device))
+     14     _, pred_ev_idx = torch.topk(y_pred, k, dim=1)
+     15     pred_ev = evs[pred_ev_idx]
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torch/nn/modules/module.py in __call__(self, *input, **kwargs)
+    548             result = self._slow_forward(*input, **kwargs)
+    549         else:
+--> 550             result = self.forward(*input, **kwargs)
+    551         for hook in self._forward_hooks.values():
+    552             hook_result = hook(self, input, result)
+
+~/Development/DHDRNet/dhdrnet/reconstruction_model.py in forward(self, x)
+     59
+     60     def forward(self, x):
+---> 61         x = self.feature_extractor(x)
+     62         return x
+     63
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torch/nn/modules/module.py in __call__(self, *input, **kwargs)
+    548             result = self._slow_forward(*input, **kwargs)
+    549         else:
+--> 550             result = self.forward(*input, **kwargs)
+    551         for hook in self._forward_hooks.values():
+    552             hook_result = hook(self, input, result)
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torchvision/models/mobilenet.py in forward(self, x)
+    158
+    159     def forward(self, x):
+--> 160         return self._forward_impl(x)
+    161
+    162
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torchvision/models/mobilenet.py in _forward_impl(self, x)
+    151         # This exists since TorchScript doesn't support inheritance, so the superclass method
+    152         # (this one) needs to have a name other than `forward` that can be accessed in a subclass
+--> 153         x = self.features(x)
+    154         # Cannot use "squeeze" as batch-size can be 1 => must use reshape with x.shape[0]
+    155         x = nn.functional.adaptive_avg_pool2d(x, 1).reshape(x.shape[0], -1)
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torch/nn/modules/module.py in __call__(self, *input, **kwargs)
+    548             result = self._slow_forward(*input, **kwargs)
+    549         else:
+--> 550             result = self.forward(*input, **kwargs)
+    551         for hook in self._forward_hooks.values():
+    552             hook_result = hook(self, input, result)
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torch/nn/modules/container.py in forward(self, input)
+     98     def forward(self, input):
+     99         for module in self:
+--> 100             input = module(input)
+    101         return input
+    102
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torch/nn/modules/module.py in __call__(self, *input, **kwargs)
+    548             result = self._slow_forward(*input, **kwargs)
+    549         else:
+--> 550             result = self.forward(*input, **kwargs)
+    551         for hook in self._forward_hooks.values():
+    552             hook_result = hook(self, input, result)
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torch/nn/modules/container.py in forward(self, input)
+     98     def forward(self, input):
+     99         for module in self:
+--> 100             input = module(input)
+    101         return input
+    102
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torch/nn/modules/module.py in __call__(self, *input, **kwargs)
+    548             result = self._slow_forward(*input, **kwargs)
+    549         else:
+--> 550             result = self.forward(*input, **kwargs)
+    551         for hook in self._forward_hooks.values():
+    552             hook_result = hook(self, input, result)
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torch/nn/modules/conv.py in forward(self, input)
+    351
+    352     def forward(self, input):
+--> 353         return self._conv_forward(input, self.weight)
+    354
+    355 class Conv3d(_ConvNd):
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/torch/nn/modules/conv.py in _conv_forward(self, input, weight)
+    347                             weight, self.bias, self.stride,
+    348                             _pair(0), self.dilation, self.groups)
+--> 349         return F.conv2d(input, weight, self.bias, self.stride,
+    350                         self.padding, self.dilation, self.groups)
+    351
+
+RuntimeError: Input type (torch.cuda.FloatTensor) and weight type (torch.FloatTensor) should be the same
+#+end_example
+:END:
+
+#+BEGIN_SRC jupyter-python
+kdf = pd.DataFrame(model_topk_scores, index=range(1,8))
+kdf.plot()
+#+END_SRC
+
+#+RESULTS:
+:RESULTS:
+# [goto error]
+#+begin_example
+---------------------------------------------------------------------------
+TypeError                                 Traceback (most recent call last)
+<ipython-input-31-05ba3d2f75ce> in <module>
+      1 kdf = pd.DataFrame(model_topk_scores, index=range(1,8))
+----> 2 kdf.plot()
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/pandas/plotting/_core.py in __call__(self, *args, **kwargs)
+    947                     data.columns = label_name
+    948
+--> 949         return plot_backend.plot(data, kind=kind, **kwargs)
+    950
+    951     __call__.__doc__ = __doc__
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/pandas/plotting/_matplotlib/__init__.py in plot(data, kind, **kwargs)
+     59             kwargs["ax"] = getattr(ax, "left_ax", ax)
+     60     plot_obj = PLOT_CLASSES[kind](data, **kwargs)
+---> 61     plot_obj.generate()
+     62     plot_obj.draw()
+     63     return plot_obj.result
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/pandas/plotting/_matplotlib/core.py in generate(self)
+    267     def generate(self):
+    268         self._args_adjust()
+--> 269         self._compute_plot_data()
+    270         self._setup_subplots()
+    271         self._make_plot()
+
+~/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/lib/python3.8/site-packages/pandas/plotting/_matplotlib/core.py in _compute_plot_data(self)
+    416         # no non-numeric frames or series allowed
+    417         if is_empty:
+--> 418             raise TypeError("no numeric data to plot")
+    419
+    420         # GH25587: cast ExtensionArray of pandas (IntegerArray, etc.) to
+
+TypeError: no numeric data to plot
+#+end_example
+:END:
