--- a/dhdrnet/notebooks/histograms.ipynb
+++ b/dhdrnet/notebooks/histograms.ipynb
@@ -56,6 +56,10 @@
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -1869,7 +1873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
