updated notebooks with binarized weight maps

--- a/dhdrnet/notebooks/NN Evals.ipynb
+++ b/dhdrnet/notebooks/NN Evals.ipynb
@@ -18,9 +18,9 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -28,7 +28,7 @@
     "from dhdrnet.util import DATA_DIR, ROOT_DIR\n",
     "\n",
     "MODEL_DIR = ROOT_DIR / \"checkpoints\"\n",
-    "print(DATA_DIR)\n"
+    "print(DATA_DIR)"
    ]
   },
   {
@@ -436,13 +436,9 @@
     }
    ],
    "source": [
-    "from dhdrnet.Dataset import RCDataset\n",
+    "from torchvision.transforms import Compose, Resize, ToTensor\n",
     "\n",
-    "from torchvision.transforms import (\n",
-    "    Compose,\n",
-    "    Resize,\n",
-    "    ToTensor,\n",
-    ")\n",
+    "from dhdrnet.Dataset import RCDataset\n",
     "\n",
     "test_data = RCDataset(\n",
     "    df=pd.read_csv(ROOT_DIR / \"precomputed_data\" / \"store_current.csv\"),\n",
@@ -450,9 +446,9 @@
     "    raw_dir=DATA_DIR / \"dngs\",\n",
     "    name_list=ROOT_DIR / \"precomputed_data\" / \"test_current.csv\",\n",
     "    transform=Compose([Resize((300, 300)), ToTensor()]),\n",
-    "    metric=\"mse\"\n",
+    "    metric=\"mse\",\n",
     ")\n",
-    "test_data.data\n"
+    "test_data.data"
    ]
   },
   {
@@ -879,8 +875,8 @@
     }
    ],
    "source": [
-    "import torch.nn.functional as F\n",
     "import torch\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "errors = test_data.data[\"mse\"]\n",
     "err_t = torch.tensor(errors.to_numpy())\n",
@@ -894,7 +890,7 @@
     "\n",
     "err_df = pd.DataFrame(error_probabilities, index=errors.index, columns=errors.columns)\n",
     "err_df = pd.concat([err_df, errors], keys=(\"prob\", \"mse\"))\n",
-    "err_df\n"
+    "err_df"
    ]
   },
   {
@@ -946,7 +942,7 @@
     "y = err_df.loc[\"mse\"].iloc[ind].transpose()\n",
     "x = s.index\n",
     "print(x)\n",
-    "plt.scatter(x, y)\n"
+    "plt.scatter(x, y)"
    ]
   },
   {
@@ -999,9 +995,10 @@
     }
    ],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "from IPython.utils import io\n",
     "from pytorch_lightning import Trainer\n",
-    "from pathlib import Path\n",
     "\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "gpus = \"0\" if torch.cuda.is_available() else None\n",
@@ -1021,8 +1018,8 @@
     "    model = model_cls.load_from_checkpoint(checkpoint_path=str(ckpt))\n",
     "    model.eval()\n",
     "\n",
-    "#     with io.capture_output(stdout=True, stderr=True) as _captured:\n",
-    "#         test_score = trainer.test(model)[\"test_loss\"]\n",
+    "    #     with io.capture_output(stdout=True, stderr=True) as _captured:\n",
+    "    #         test_score = trainer.test(model)[\"test_loss\"]\n",
     "    test_score = 0\n",
     "    return test_score, model.cuda(), ckpt.stem\n",
     "\n",
@@ -1043,8 +1040,7 @@
     "        (MODEL_DIR / f\"best_{backbone}.ckpt\").symlink_to(\n",
     "            MODEL_DIR / f\"{best_name}.ckpt\"\n",
     "        )\n",
-    "        return best_score, best_model.cuda(), best_name\n",
-    "\n"
+    "        return best_score, best_model.cuda(), best_name"
    ]
   },
   {
@@ -1069,12 +1065,13 @@
     }
    ],
    "source": [
-    "from dhdrnet.reconstruction_model import RCNet\n",
+    "from pytorch_lightning import seed_everything\n",
+    "\n",
+    "from dhdrnet.Dataset import LUTDataset, RCDataset\n",
     "from dhdrnet.histogram_model import HistogramNet\n",
     "from dhdrnet.model import DHDRMobileNet_v3, DHDRSqueezeNet\n",
+    "from dhdrnet.reconstruction_model import RCNet\n",
     "from dhdrnet.resnet_model import DHDRResnet\n",
-    "from dhdrnet.Dataset import LUTDataset, RCDataset\n",
-    "from pytorch_lightning import seed_everything\n",
     "\n",
     "seed_everything(19)\n",
     "\n",
@@ -1088,7 +1085,7 @@
     "print(f\"{mobile_score=}\")\n",
     "print(f\"{resnet_score=}\")\n",
     "print(f\"{squeeze_score=}\")\n",
-    "print(f\"{rcnet_score=}\")\n"
+    "print(f\"{rcnet_score=}\")"
    ]
   },
   {
@@ -1097,8 +1094,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from more_itertools import collapse, flatten, one\n",
     "from torch.utils.data import DataLoader\n",
-    "from more_itertools import flatten, one, collapse\n",
     "\n",
     "evs = torch.tensor(test_data.evs)\n",
     "\n",
@@ -1139,8 +1136,7 @@
     "        if true_ev in predicted_evs:\n",
     "            c += 1\n",
     "\n",
-    "    return 100.0 * c / len(names)\n",
-    "\n"
+    "    return 100.0 * c / len(names)"
    ]
   },
   {
@@ -1163,7 +1159,7 @@
     "    name_list=ROOT_DIR / \"precomputed_data\" / \"test_current.csv\",\n",
     "    transform=Compose([Resize((300, 300)), ToTensor()]),\n",
     ")\n",
-    "lut_loader = DataLoader(lut_data, batch_size=4, num_workers=8)\n"
+    "lut_loader = DataLoader(lut_data, batch_size=4, num_workers=8)"
    ]
   },
   {
@@ -1225,7 +1221,7 @@
     "        score = topk_accuracy(*args, k=k)\n",
     "        model_topk_scores[name].append(score)\n",
     "\n",
-    "pprint(model_topk_scores)\n"
+    "pprint(model_topk_scores)"
    ]
   },
   {
@@ -1254,7 +1250,7 @@
     "ax = kdf.plot(\n",
     "    grid=\"both\", title=\"Top-K Accuracy\", xlabel=\"K\", ylabel=\"% Accuracy\", figsize=(5, 5)\n",
     ")\n",
-    "# ax.figure.savefig(figdir / \"topk_plot.pdf\")\n"
+    "# ax.figure.savefig(figdir / \"topk_plot.pdf\")"
    ]
   },
   {
@@ -1263,7 +1259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kdf.to_latex(figdir / \"topk_table.tex\")\n"
+    "kdf.to_latex(figdir / \"topk_table.tex\")"
    ]
   },
   {
@@ -1296,8 +1292,8 @@
     }
    ],
    "source": [
-    "\n",
     "import random as rand\n",
+    "\n",
     "df = test_data.data\n",
     "# rand_ev = rand.choices(range(0,len(df[\"mse\"].columns)), k=len(df))\n",
     "# df.take(rand_ev,axis=0)\n",
@@ -1305,7 +1301,7 @@
     "for name, data in df.iterrows():\n",
     "    ev = rand.choice(df[\"mse\"].columns)\n",
     "    rand_sel[name] = (ev, data[\"mse\"][ev])\n",
-    "    \n",
+    "\n",
     "\n",
     "mean_err = np.mean([x[1] for x in rand_sel.values()])\n",
     "mean_err"
@@ -1459,8 +1455,7 @@
    ],
    "source": [
     "mobile_df = pd.DataFrame.from_records(\n",
-    "    zip(names, mobile_pred_evs), \n",
-    "    columns=[\"names\", \"pred\"]\n",
+    "    zip(names, mobile_pred_evs), columns=[\"names\", \"pred\"]\n",
     ")\n",
     "mobile_df"
    ]
@@ -1592,9 +1587,7 @@
     }
    ],
    "source": [
-    "res_df = pd.DataFrame.from_records(\n",
-    "    zip(names, resnet_pred_evs)\n",
-    ")\n",
+    "res_df = pd.DataFrame.from_records(zip(names, resnet_pred_evs))\n",
     "res_df"
    ]
   },
@@ -1725,9 +1718,7 @@
     }
    ],
    "source": [
-    "squeeze_df = pd.DataFrame.from_records(\n",
-    "    zip(names, squeeze_pred_evs)\n",
-    ")\n",
+    "squeeze_df = pd.DataFrame.from_records(zip(names, squeeze_pred_evs))\n",
     "res_df"
    ]
   },
@@ -1869,14 +1860,12 @@
     }
    ],
    "source": [
-    "score_df =  (\n",
-    "    pd.read_csv(\n",
-    "        ROOT_DIR / \"precomputed_data\" / \"store_test_2020-10-18.csv\"\n",
-    "    )\n",
+    "score_df = (\n",
+    "    pd.read_csv(ROOT_DIR / \"precomputed_data\" / \"store_test_2020-10-18.csv\")\n",
     "    .drop(columns=[\"Unnamed: 0\", \"ev1\"])\n",
     "    .rename(columns={\"ev2\": \"ev\"})\n",
     ")\n",
-    "score_df\n"
+    "score_df"
    ]
   },
   {
@@ -1896,6 +1885,7 @@
     "\n",
     "    score_inds = list(flatten(score_inds))\n",
     "    return score_inds, names\n",
+    "\n",
     "\n",
     "def get_scores_for_preds(pred_df, score_df):\n",
     "    score_inds, names = get_score_inds(pred_df, score_df)\n",
@@ -1988,7 +1978,9 @@
     }
    ],
    "source": [
-    "res_scores.groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]].to_latex(figdir/\"res_scores.tex\")\n",
+    "res_scores.groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]].to_latex(\n",
+    "    figdir / \"res_scores.tex\"\n",
+    ")\n",
     "res_scores.groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]]"
    ]
   },
@@ -2067,7 +2059,9 @@
     }
    ],
    "source": [
-    "mobile_scores.groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]].to_latex(figdir / \"mobile_scores.tex\")\n",
+    "mobile_scores.groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]].to_latex(\n",
+    "    figdir / \"mobile_scores.tex\"\n",
+    ")\n",
     "mobile_scores.groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]]"
    ]
   },
@@ -2146,7 +2140,9 @@
     }
    ],
    "source": [
-    "squeeze_scores.groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]].to_latex(figdir/\"squeeze_scores.tex\")\n",
+    "squeeze_scores.groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]].to_latex(\n",
+    "    figdir / \"squeeze_scores.tex\"\n",
+    ")\n",
     "squeeze_scores.groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]]"
    ]
   },
