--- a/dhdrnet/notebooks/Untitled.ipynb
+++ b/dhdrnet/notebooks/Untitled.ipynb
@@ -418,13 +418,13 @@
    ],
    "source": [
     "idxmins = (\n",
-    "    df[(df[\"metric\"] == \"perceptual\") | (df[\"metric\"]  == \"rmse\")]\n",
+    "    df[(df[\"metric\"] == \"perceptual\") | (df[\"metric\"] == \"rmse\")]\n",
     "    .groupby([\"name\", \"metric\"])[\"score\"]\n",
     "    .idxmin()\n",
     ")\n",
     "best_scores_min = df.loc[idxmins]\n",
     "best_scores_min\n",
-    "#this is the minimum score for each metric for each image\n",
+    "# this is the minimum score for each metric for each image\n",
     "# unfortunately we want min for mse and perceptual\n",
     "# and maxes for psnr, ssim"
    ]
@@ -792,7 +792,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[df[\"ev\"] == 3.5].groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]].to_latex(figdir / \"fixed_choice.tex\")"
+    "df.loc[df[\"ev\"] == 3.5].groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]].to_latex(\n",
+    "    figdir / \"fixed_choice.tex\"\n",
+    ")"
    ]
   },
   {
@@ -933,7 +935,7 @@
     }
    ],
    "source": [
-    "cdf = pd.read_csv(ROOT_DIR/\"precomputed_data\"/\"store_updown_2020-10-18.csv\")\n",
+    "cdf = pd.read_csv(ROOT_DIR / \"precomputed_data\" / \"store_updown_2020-10-18.csv\")\n",
     "cdf"
    ]
   },
@@ -1076,13 +1078,13 @@
    ],
    "source": [
     "cidxmins = (\n",
-    "    cdf[(cdf[\"metric\"] == \"perceptual\") | (cdf[\"metric\"]  == \"rmse\")]\n",
+    "    cdf[(cdf[\"metric\"] == \"perceptual\") | (cdf[\"metric\"] == \"rmse\")]\n",
     "    .groupby([\"name\", \"metric\"])[\"score\"]\n",
     "    .idxmin()\n",
     ")\n",
     "cbest_scores_min = cdf.loc[cidxmins]\n",
     "cbest_scores_min\n",
-    "#this is the minimum score for each metric for each image\n",
+    "# this is the minimum score for each metric for each image\n",
     "# unfortunately we want min for mse and perceptual\n",
     "# and maxes for psnr, ssim"
    ]
@@ -1311,7 +1313,7 @@
    "source": [
     "cmin = cbest_scores_min.groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]]\n",
     "cmax = cbest_scores_max.groupby(\"metric\").describe()[\"score\"][[\"mean\", \"std\"]]\n",
-    "pd.concat([cmin,cmax])"
+    "pd.concat([cmin, cmax])"
    ]
   },
   {
@@ -1492,7 +1494,9 @@
     }
    ],
    "source": [
-    "cdf.groupby([\"ev\", \"metric\"]).describe()[\"score\"][[\"mean\", \"std\"]].to_latex(figdir/\"conv_choice.tex\")\n",
+    "cdf.groupby([\"ev\", \"metric\"]).describe()[\"score\"][[\"mean\", \"std\"]].to_latex(\n",
+    "    figdir / \"conv_choice.tex\"\n",
+    ")\n",
     "cdf.groupby([\"ev\", \"metric\"]).describe()[\"score\"][[\"mean\", \"std\"]]"
    ]
   },
